--- a/styles/style.css
+++ b/styles/style.css
@@ -37,11 +37,14 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+
+    transition: width 0.3s, height 0.3s;
+    transition-timing-function: ease;
 }
 
 section#login > div#image {
     display: block;
-    background: #5f2c82 url(../images/pexels-sean-whang-25006-804269.jpg);
+    background: #5f2c82 url(../images/pexels-sean-whang-25006-804269.jpg) no-repeat;
     background-size: cover;
     background-position: left top;
     height: 200px;
