--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -20,6 +20,14 @@
         float: right;
         width: 70%;
     }
+
+    div#formulario > h1 {
+        font-size: 1.6em;
+    }
+
+    div#formulario > p {
+        font-size: 1em;
+    }
 }
 
 @media screen and (min-width: 992px) {
@@ -40,6 +48,14 @@
     section#login > div#formulario {
         float: right;
         width: 50%;
+    }
+
+    div#formulario > h1 {
+        font-size: 2em;
+    }
+    
+    div#formulario > p {
+        font-size: 1.2em;
     }
 }
 
