finalizei o projeto login

--- a/styles/media-query.css
+++ b/styles/media-query.css
@@ -7,6 +7,7 @@
     
     section#login {
         width: 80vw;
+        height: 300px;
     }
 
     section#login > div#image {
@@ -27,6 +28,7 @@
 
     div#formulario > p {
         font-size: 1em;
+        margin: 6px 0px;
     }
 }
 
@@ -37,6 +39,7 @@
 
     section#login {
         width: 950px;
+        height: 330px;
     }
 
     section#login > div#image {
@@ -55,7 +58,8 @@
     }
     
     div#formulario > p {
-        font-size: 1.2em;
+        font-size: 1.1em;
+        margin: 15px 0px;
     }
 }
 
